--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,18 @@
 .list-group-item
 {
-  display:flex;
+  display: flex;
   justify-content: space-between;
+}
+.container
+{
+  display: flex;
+  height: 600px;
+  background-color: black;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+ul
+{
+  width:600px;
 }
